Add restart policies to etcd and apisix services
Both etcd and apisix services in the docker-compose.yml file have been configured with a restart policy set to 'always'. This ensures that the services will be automatically restarted by Docker in case of a failure or system reboot.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "2379:2379"
     volumes:
       - etcd-data:/bitnami/etcd
+    restart: always
 
   apisix:
     image: apache/apisix:latest
@@ -25,6 +26,7 @@ services:
     ports:
       - "9080:9080"
       - "9180:9180"
+    restart: always
 
   dashboard:
     image: apache/apisix-dashboard:latest
