Add option to mount disk for etcd data storage
Updated README with steps to mount disk to `/mnt/data/etcd-data`. Added commands in `install.sh` to create and set permissions for this directory. Updated `docker-compose.yml` to bind-mount the disk into the etcd data volume.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,10 @@ services:
 volumes:
   etcd-data:
     driver: local
+    driver_opts:
+      type: none
+      device: /mnt/data/etcd-data
+      o: bind
 
 networks:
   apisix-network:
